Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TKN_BOOLEAN
    TKN_CASE
    TKN_CHAR
    TKN_COMA
    TKN_CONTINUE
    TKN_CORCHETEDER
    TKN_CORCHETEIZQ
    TKN_DEFAULT
    TKN_DOSPUNTOS
    TKN_DOUBLE
    TKN_INT
    TKN_LENGTH
    TKN_NEW
    TKN_PUNTO
    TKN_READ
    TKN_RETURN
    TKN_ROUND
    TKN_STRING
    TKN_SWITCH
    TKN_TOLOWER
    TKN_TO_UPPER
    TKN_TRUNCATE
    TKN_TYPE_OF
    TKN_VOID

Grammar

Rule 0     S' -> s
Rule 1     s -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     finalizacion -> TKN_PTCOMA
Rule 5     finalizacion -> <empty>
Rule 6     instruccion -> instPrint finalizacion
Rule 7     instruccion -> expresion finalizacion
Rule 8     instruccion -> declararVar finalizacion
Rule 9     instruccion -> asignacion finalizacion
Rule 10    instruccion -> instIF
Rule 11    instruccion -> instWhile
Rule 12    instruccion -> instBreak finalizacion
Rule 13    instruccion -> instMain
Rule 14    instruccion -> instFor
Rule 15    instruccion -> error TKN_PTCOMA
Rule 16    instPrint -> TKN_PRINT TKN_PARIZQ expresion TKN_PARDER
Rule 17    instMain -> TKN_MAIN TKN_PARIZQ TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
Rule 18    expresion -> expresion TKN_MAS expresion
Rule 19    expresion -> expresion TKN_MENOS expresion
Rule 20    expresion -> expresion TKN_POR expresion
Rule 21    expresion -> expresion TKN_DIV expresion
Rule 22    expresion -> expresion TKN_POTENCIA expresion
Rule 23    expresion -> expresion TKN_MOD expresion
Rule 24    expresion -> expresion TKN_IGUAL_IGUAL expresion
Rule 25    expresion -> expresion TKN_DIFERENTE expresion
Rule 26    expresion -> expresion TKN_MENOR expresion
Rule 27    expresion -> expresion TKN_MAYOR expresion
Rule 28    expresion -> expresion TKN_MENORI expresion
Rule 29    expresion -> expresion TKN_MAYORI expresion
Rule 30    expresion -> expresion TKN_OR expresion
Rule 31    expresion -> expresion TKN_AND expresion
Rule 32    expresion -> TKN_NOT expresion
Rule 33    expresion -> TKN_MENOS expresion
Rule 34    expresion -> TKN_PARIZQ expresion TKN_PARDER
Rule 35    expresion -> ID
Rule 36    expresion -> ENTERO
Rule 37    expresion -> DECIMAL
Rule 38    expresion -> CADENA
Rule 39    expresion -> CHARACTER
Rule 40    expresion -> TKN_FALSE
Rule 41    expresion -> TKN_TRUE
Rule 42    expresion -> TKN_NULL
Rule 43    expresion -> incrementoDecremento
Rule 44    incrementoDecremento -> ID TKN_INCREMENTO
Rule 45    incrementoDecremento -> ID TKN_DECREMENTO
Rule 46    declararVar -> TKN_VAR ID
Rule 47    declararVar -> TKN_VAR ID TKN_IGUAL expresion
Rule 48    asignacion -> ID TKN_IGUAL expresion
Rule 49    instIF -> TKN_IF TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
Rule 50    instIF -> TKN_IF TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER TKN_ELSE TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
Rule 51    instIF -> TKN_IF TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER TKN_ELSE instIF
Rule 52    instWhile -> TKN_WHILE TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
Rule 53    instBreak -> TKN_BREAK
Rule 54    instFor -> TKN_FOR TKN_PARIZQ inicializacionFor TKN_PTCOMA expresion TKN_PTCOMA actualizacionFor TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
Rule 55    inicializacionFor -> asignacion
Rule 56    inicializacionFor -> declararVar
Rule 57    actualizacionFor -> incrementoDecremento
Rule 58    actualizacionFor -> asignacion

Terminals, with rules where they appear

CADENA               : 38
CHARACTER            : 39
DECIMAL              : 37
ENTERO               : 36
ID                   : 35 44 45 46 47 48
TKN_AND              : 31
TKN_BOOLEAN          : 
TKN_BREAK            : 53
TKN_CASE             : 
TKN_CHAR             : 
TKN_COMA             : 
TKN_CONTINUE         : 
TKN_CORCHETEDER      : 
TKN_CORCHETEIZQ      : 
TKN_DECREMENTO       : 45
TKN_DEFAULT          : 
TKN_DIFERENTE        : 25
TKN_DIV              : 21
TKN_DOSPUNTOS        : 
TKN_DOUBLE           : 
TKN_ELSE             : 50 51
TKN_FALSE            : 40
TKN_FOR              : 54
TKN_IF               : 49 50 51
TKN_IGUAL            : 47 48
TKN_IGUAL_IGUAL      : 24
TKN_INCREMENTO       : 44
TKN_INT              : 
TKN_LENGTH           : 
TKN_LLAVEDER         : 17 49 50 50 51 52 54
TKN_LLAVEIZQ         : 17 49 50 50 51 52 54
TKN_MAIN             : 17
TKN_MAS              : 18
TKN_MAYOR            : 27
TKN_MAYORI           : 29
TKN_MENOR            : 26
TKN_MENORI           : 28
TKN_MENOS            : 19 33
TKN_MOD              : 23
TKN_NEW              : 
TKN_NOT              : 32
TKN_NULL             : 42
TKN_OR               : 30
TKN_PARDER           : 16 17 34 49 50 51 52 54
TKN_PARIZQ           : 16 17 34 49 50 51 52 54
TKN_POR              : 20
TKN_POTENCIA         : 22
TKN_PRINT            : 16
TKN_PTCOMA           : 4 15 54 54
TKN_PUNTO            : 
TKN_READ             : 
TKN_RETURN           : 
TKN_ROUND            : 
TKN_STRING           : 
TKN_SWITCH           : 
TKN_TOLOWER          : 
TKN_TO_UPPER         : 
TKN_TRUE             : 41
TKN_TRUNCATE         : 
TKN_TYPE_OF          : 
TKN_VAR              : 46 47
TKN_VOID             : 
TKN_WHILE            : 52
error                : 15

Nonterminals, with rules where they appear

actualizacionFor     : 54
asignacion           : 9 55 58
declararVar          : 8 56
expresion            : 7 16 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34 47 48 49 50 51 52 54
finalizacion         : 6 7 8 9 12
incrementoDecremento : 43 57
inicializacionFor    : 54
instBreak            : 12
instFor              : 14
instIF               : 10 51
instMain             : 13
instPrint            : 6
instWhile            : 11
instruccion          : 2 3
instrucciones        : 1 2 17 49 50 50 51 52 54
s                    : 0

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (6) instruccion -> . instPrint finalizacion
    (7) instruccion -> . expresion finalizacion
    (8) instruccion -> . declararVar finalizacion
    (9) instruccion -> . asignacion finalizacion
    (10) instruccion -> . instIF
    (11) instruccion -> . instWhile
    (12) instruccion -> . instBreak finalizacion
    (13) instruccion -> . instMain
    (14) instruccion -> . instFor
    (15) instruccion -> . error TKN_PTCOMA
    (16) instPrint -> . TKN_PRINT TKN_PARIZQ expresion TKN_PARDER
    (18) expresion -> . expresion TKN_MAS expresion
    (19) expresion -> . expresion TKN_MENOS expresion
    (20) expresion -> . expresion TKN_POR expresion
    (21) expresion -> . expresion TKN_DIV expresion
    (22) expresion -> . expresion TKN_POTENCIA expresion
    (23) expresion -> . expresion TKN_MOD expresion
    (24) expresion -> . expresion TKN_IGUAL_IGUAL expresion
    (25) expresion -> . expresion TKN_DIFERENTE expresion
    (26) expresion -> . expresion TKN_MENOR expresion
    (27) expresion -> . expresion TKN_MAYOR expresion
    (28) expresion -> . expresion TKN_MENORI expresion
    (29) expresion -> . expresion TKN_MAYORI expresion
    (30) expresion -> . expresion TKN_OR expresion
    (31) expresion -> . expresion TKN_AND expresion
    (32) expresion -> . TKN_NOT expresion
    (33) expresion -> . TKN_MENOS expresion
    (34) expresion -> . TKN_PARIZQ expresion TKN_PARDER
    (35) expresion -> . ID
    (36) expresion -> . ENTERO
    (37) expresion -> . DECIMAL
    (38) expresion -> . CADENA
    (39) expresion -> . CHARACTER
    (40) expresion -> . TKN_FALSE
    (41) expresion -> . TKN_TRUE
    (42) expresion -> . TKN_NULL
    (43) expresion -> . incrementoDecremento
    (46) declararVar -> . TKN_VAR ID
    (47) declararVar -> . TKN_VAR ID TKN_IGUAL expresion
    (48) asignacion -> . ID TKN_IGUAL expresion
    (49) instIF -> . TKN_IF TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
    (50) instIF -> . TKN_IF TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER TKN_ELSE TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
    (51) instIF -> . TKN_IF TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER TKN_ELSE instIF
    (52) instWhile -> . TKN_WHILE TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
    (53) instBreak -> . TKN_BREAK
    (17) instMain -> . TKN_MAIN TKN_PARIZQ TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
    (54) instFor -> . TKN_FOR TKN_PARIZQ inicializacionFor TKN_PTCOMA expresion TKN_PTCOMA actualizacionFor TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
    (44) incrementoDecremento -> . ID TKN_INCREMENTO
    (45) incrementoDecremento -> . ID TKN_DECREMENTO

    error           shift and go to state 13
    TKN_PRINT       shift and go to state 14
    TKN_NOT         shift and go to state 17
    TKN_MENOS       shift and go to state 16
    TKN_PARIZQ      shift and go to state 15
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20
    CADENA          shift and go to state 21
    CHARACTER       shift and go to state 22
    TKN_FALSE       shift and go to state 23
    TKN_TRUE        shift and go to state 24
    TKN_NULL        shift and go to state 25
    TKN_VAR         shift and go to state 27
    TKN_IF          shift and go to state 28
    TKN_WHILE       shift and go to state 29
    TKN_BREAK       shift and go to state 30
    TKN_MAIN        shift and go to state 31
    TKN_FOR         shift and go to state 32

    s                              shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    instPrint                      shift and go to state 4
    expresion                      shift and go to state 5
    declararVar                    shift and go to state 6
    asignacion                     shift and go to state 7
    instIF                         shift and go to state 8
    instWhile                      shift and go to state 9
    instBreak                      shift and go to state 10
    instMain                       shift and go to state 11
    instFor                        shift and go to state 12
    incrementoDecremento           shift and go to state 26

state 1

    (0) S' -> s .



state 2

    (1) s -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (6) instruccion -> . instPrint finalizacion
    (7) instruccion -> . expresion finalizacion
    (8) instruccion -> . declararVar finalizacion
    (9) instruccion -> . asignacion finalizacion
    (10) instruccion -> . instIF
    (11) instruccion -> . instWhile
    (12) instruccion -> . instBreak finalizacion
    (13) instruccion -> . instMain
    (14) instruccion -> . instFor
    (15) instruccion -> . error TKN_PTCOMA
    (16) instPrint -> . TKN_PRINT TKN_PARIZQ expresion TKN_PARDER
    (18) expresion -> . expresion TKN_MAS expresion
    (19) expresion -> . expresion TKN_MENOS expresion
    (20) expresion -> . expresion TKN_POR expresion
    (21) expresion -> . expresion TKN_DIV expresion
    (22) expresion -> . expresion TKN_POTENCIA expresion
    (23) expresion -> . expresion TKN_MOD expresion
    (24) expresion -> . expresion TKN_IGUAL_IGUAL expresion
    (25) expresion -> . expresion TKN_DIFERENTE expresion
    (26) expresion -> . expresion TKN_MENOR expresion
    (27) expresion -> . expresion TKN_MAYOR expresion
    (28) expresion -> . expresion TKN_MENORI expresion
    (29) expresion -> . expresion TKN_MAYORI expresion
    (30) expresion -> . expresion TKN_OR expresion
    (31) expresion -> . expresion TKN_AND expresion
    (32) expresion -> . TKN_NOT expresion
    (33) expresion -> . TKN_MENOS expresion
    (34) expresion -> . TKN_PARIZQ expresion TKN_PARDER
    (35) expresion -> . ID
    (36) expresion -> . ENTERO
    (37) expresion -> . DECIMAL
    (38) expresion -> . CADENA
    (39) expresion -> . CHARACTER
    (40) expresion -> . TKN_FALSE
    (41) expresion -> . TKN_TRUE
    (42) expresion -> . TKN_NULL
    (43) expresion -> . incrementoDecremento
    (46) declararVar -> . TKN_VAR ID
    (47) declararVar -> . TKN_VAR ID TKN_IGUAL expresion
    (48) asignacion -> . ID TKN_IGUAL expresion
    (49) instIF -> . TKN_IF TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
    (50) instIF -> . TKN_IF TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER TKN_ELSE TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
    (51) instIF -> . TKN_IF TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER TKN_ELSE instIF
    (52) instWhile -> . TKN_WHILE TKN_PARIZQ expresion TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
    (53) instBreak -> . TKN_BREAK
    (17) instMain -> . TKN_MAIN TKN_PARIZQ TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
    (54) instFor -> . TKN_FOR TKN_PARIZQ inicializacionFor TKN_PTCOMA expresion TKN_PTCOMA actualizacionFor TKN_PARDER TKN_LLAVEIZQ instrucciones TKN_LLAVEDER
    (44) incrementoDecremento -> . ID TKN_INCREMENTO
    (45) incrementoDecremento -> . ID TKN_DECREMENTO

    $end            reduce using rule 1 (s -> instrucciones .)
    error           shift and go to state 13
    TKN_PRINT       shift and go to state 14
    TKN_NOT         shift and go to state 17
    TKN_MENOS       shift and go to state 16
    TKN_PARIZQ      shift and go to state 15
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20
    CADENA          shift and go to state 21
    CHARACTER       shift and go to state 22
    TKN_FALSE       shift and go to state 23
    TKN_TRUE        shift and go to state 24
    TKN_NULL        shift and go to state 25
    TKN_VAR         shift and go to state 27
    TKN_IF          shift and go to state 28
    TKN_WHILE       shift and go to state 29
    TKN_BREAK       shift and go to state 30
    TKN_MAIN        shift and go to state 31
    TKN_FOR         shift and go to state 32

    instruccion                    shift and go to state 33
    instPrint                      shift and go to state 4
    expresion                      shift and go to state 5
    declararVar                    shift and go to state 6
    asignacion                     shift and go to state 7
    instIF                         shift and go to state 8
    instWhile                      shift and go to state 9
    instBreak                      shift and go to state 10
    instMain                       shift and go to state 11
    instFor                        shift and go to state 12
    incrementoDecremento           shift and go to state 26

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    TKN_PRINT       reduce using rule 3 (instrucciones -> instruccion .)
    TKN_NOT         reduce using rule 3 (instrucciones -> instruccion .)
    TKN_MENOS       reduce using rule 3 (instrucciones -> instruccion .)
    TKN_PARIZQ      reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 3 (instrucciones -> instruccion .)
    CADENA          reduce using rule 3 (instrucciones -> instruccion .)
    CHARACTER       reduce using rule 3 (instrucciones -> instruccion .)
    TKN_FALSE       reduce using rule 3 (instrucciones -> instruccion .)
    TKN_TRUE        reduce using rule 3 (instrucciones -> instruccion .)
    TKN_NULL        reduce using rule 3 (instrucciones -> instruccion .)
    TKN_VAR         reduce using rule 3 (instrucciones -> instruccion .)
    TKN_IF          reduce using rule 3 (instrucciones -> instruccion .)
    TKN_WHILE       reduce using rule 3 (instrucciones -> instruccion .)
    TKN_BREAK       reduce using rule 3 (instrucciones -> instruccion .)
    TKN_MAIN        reduce using rule 3 (instrucciones -> instruccion .)
    TKN_FOR         reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    TKN_LLAVEDER    reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (6) instruccion -> instPrint . finalizacion
    (4) finalizacion -> . TKN_PTCOMA
    (5) finalizacion -> .

    TKN_PTCOMA      shift and go to state 35
    error           reduce using rule 5 (finalizacion -> .)
    TKN_PRINT       reduce using rule 5 (finalizacion -> .)
    TKN_NOT         reduce using rule 5 (finalizacion -> .)
    TKN_MENOS       reduce using rule 5 (finalizacion -> .)
    TKN_PARIZQ      reduce using rule 5 (finalizacion -> .)
    ID              reduce using rule 5 (finalizacion -> .)
    ENTERO          reduce using rule 5 (finalizacion -> .)
    DECIMAL         reduce using rule 5 (finalizacion -> .)
    CADENA          reduce using rule 5 (finalizacion -> .)
    CHARACTER       reduce using rule 5 (finalizacion -> .)
    TKN_FALSE       reduce using rule 5 (finalizacion -> .)
    TKN_TRUE        reduce using rule 5 (finalizacion -> .)
    TKN_NULL        reduce using rule 5 (finalizacion -> .)
    TKN_VAR         reduce using rule 5 (finalizacion -> .)
    TKN_IF          reduce using rule 5 (finalizacion -> .)
    TKN_WHILE       reduce using rule 5 (finalizacion -> .)
    TKN_BREAK       reduce using rule 5 (finalizacion -> .)
    TKN_MAIN        reduce using rule 5 (finalizacion -> .)
    TKN_FOR         reduce using rule 5 (finalizacion -> .)
    $end            reduce using rule 5 (finalizacion -> .)
    TKN_LLAVEDER    reduce using rule 5 (finalizacion -> .)

    finalizacion                   shift and go to state 34

state 5

    (7) instruccion -> expresion . finalizacion
    (18) expresion -> expresion . TKN_MAS expresion
    (19) expresion -> expresion . TKN_MENOS expresion
    (20) expresion -> expresion . TKN_POR expresion
    (21) expresion -> expresion . TKN_DIV expresion
    (22) expresion -> expresion . TKN_POTENCIA expresion
    (23) expresion -> expresion . TKN_MOD expresion
    (24) expresion -> expresion . TKN_IGUAL_IGUAL expresion
    (25) expresion -> expresion . TKN_DIFERENTE expresion
    (26) expresion -> expresion . TKN_MENOR expresion
    (27) expresion -> expresion . TKN_MAYOR expresion
    (28) expresion -> expresion . TKN_MENORI expresion
    (29) expresion -> expresion . TKN_MAYORI expresion
    (30) expresion -> expresion . TKN_OR expresion
    (31) expresion -> expresion . TKN_AND expresion
    (4) finalizacion -> . TKN_PTCOMA
    (5) finalizacion -> .

  ! shift/reduce conflict for TKN_MENOS resolved as shift
    TKN_MAS         shift and go to state 37
    TKN_MENOS       shift and go to state 38
    TKN_POR         shift and go to state 39
    TKN_DIV         shift and go to state 40
    TKN_POTENCIA    shift and go to state 41
    TKN_MOD         shift and go to state 42
    TKN_IGUAL_IGUAL shift and go to state 43
    TKN_DIFERENTE   shift and go to state 44
    TKN_MENOR       shift and go to state 45
    TKN_MAYOR       shift and go to state 46
    TKN_MENORI      shift and go to state 47
    TKN_MAYORI      shift and go to state 48
    TKN_OR          shift and go to state 49
    TKN_AND         shift and go to state 50
    TKN_PTCOMA      shift and go to state 35
    error           reduce using rule 5 (finalizacion -> .)
    TKN_PRINT       reduce using rule 5 (finalizacion -> .)
    TKN_NOT         reduce using rule 5 (finalizacion -> .)
    TKN_PARIZQ      reduce using rule 5 (finalizacion -> .)
    ID              reduce using rule 5 (finalizacion -> .)
    ENTERO          reduce using rule 5 (finalizacion -> .)
    DECIMAL         reduce using rule 5 (finalizacion -> .)
    CADENA          reduce using rule 5 (finalizacion -> .)
    CHARACTER       reduce using rule 5 (finalizacion -> .)
    TKN_FALSE       reduce using rule 5 (finalizacion -> .)
    TKN_TRUE        reduce using rule 5 (finalizacion -> .)
    TKN_NULL        reduce using rule 5 (finalizacion -> .)
    TKN_VAR         reduce using rule 5 (finalizacion -> .)
    TKN_IF          reduce using rule 5 (finalizacion -> .)
    TKN_WHILE       reduce using rule 5 (finalizacion -> .)
    TKN_BREAK       reduce using rule 5 (finalizacion -> .)
    TKN_MAIN        reduce using rule 5 (finalizacion -> .)
    TKN_FOR         reduce using rule 5 (finalizacion -> .)
    $end            reduce using rule 5 (finalizacion -> .)
    TKN_LLAVEDER    reduce using rule 5 (finalizacion -> .)

  ! TKN_MENOS       [ reduce using rule 5 (finalizacion -> .) ]

    finalizacion                   shift and go to state 36

state 6

    (8) instruccion -> declararVar . finalizacion
    (4) finalizacion -> . TKN_PTCOMA
    (5) finalizacion -> .

    TKN_PTCOMA      shift and go to state 35
    error           reduce using rule 5 (finalizacion -> .)
    TKN_PRINT       reduce using rule 5 (finalizacion -> .)
    TKN_NOT         reduce using rule 5 (finalizacion -> .)
    TKN_MENOS       reduce using rule 5 (finalizacion -> .)
    TKN_PARIZQ      reduce using rule 5 (finalizacion -> .)
    ID              reduce using rule 5 (finalizacion -> .)
    ENTERO          reduce using rule 5 (finalizacion -> .)
    DECIMAL         reduce using rule 5 (finalizacion -> .)
    CADENA          reduce using rule 5 (finalizacion -> .)
    CHARACTER       reduce using rule 5 (finalizacion -> .)
    TKN_FALSE       reduce using rule 5 (finalizacion -> .)
    TKN_TRUE        reduce using rule 5 (finalizacion -> .)
    TKN_NULL        reduce using rule 5 (finalizacion -> .)
    TKN_VAR         reduce using rule 5 (finalizacion -> .)
    TKN_IF          reduce using rule 5 (finalizacion -> .)
    TKN_WHILE       reduce using rule 5 (finalizacion -> .)
    TKN_BREAK       reduce using rule 5 (finalizacion -> .)
    TKN_MAIN        reduce using rule 5 (finalizacion -> .)
    TKN_FOR         reduce using rule 5 (finalizacion -> .)
    $end            reduce using rule 5 (finalizacion -> .)
    TKN_LLAVEDER    reduce using rule 5 (finalizacion -> .)

    finalizacion                   shift and go to state 51

state 7

    (9) instruccion -> asignacion . finalizacion
    (4) finalizacion -> . TKN_PTCOMA
    (5) finalizacion -> .

    TKN_PTCOMA      shift and go to state 35
    error           reduce using rule 5 (finalizacion -> .)
    TKN_PRINT       reduce using rule 5 (finalizacion -> .)
    TKN_NOT         reduce using rule 5 (finalizacion -> .)
    TKN_MENOS       reduce using rule 5 (finalizacion -> .)
    TKN_PARIZQ      reduce using rule 5 (finalizacion -> .)
    ID              reduce using rule 5 (finalizacion -> .)
    ENTERO          reduce using rule 5 (finalizacion -> .)
    DECIMAL         reduce using rule 5 (finalizacion -> .)
    CADENA          reduce using rule 5 (finalizacion -> .)
    CHARACTER       reduce using rule 5 (finalizacion -> .)
    TKN_FALSE       reduce using rule 5 (finalizacion -> .)
    TKN_TRUE        reduce using rule 5 (finalizacion -> .)
    TKN_NULL        reduce using rule 5 (finalizacion -> .)
    TKN_VAR         reduce using rule 5 (finalizacion -> .)
    TKN_IF          reduce using rule 5 (finalizacion -> .)
    TKN_WHILE       reduce using rule 5 (finalizacion -> .)
    TKN_BREAK       reduce using rule 5 (finalizacion -> .)
    TKN_MAIN        reduce using rule 5 (finalizacion -> .)
    TKN_FOR         reduce using rule 5 (finalizacion -> .)
    $end            reduce using rule 5 (finalizacion -> .)
    TKN_LLAVEDER    reduce using rule 5 (finalizacion -> .)

    finalizacion                   shift and go to state 52

state 8

    (10) instruccion -> instIF .

    error           reduce using rule 10 (instruccion -> instIF .)
    TKN_PRINT       reduce using rule 10 (instruccion -> instIF .)
    TKN_NOT         reduce using rule 10 (instruccion -> instIF .)
    TKN_MENOS       reduce using rule 10 (instruccion -> instIF .)
    TKN_PARIZQ      reduce using rule 10 (instruccion -> instIF .)
    ID              reduce using rule 10 (instruccion -> instIF .)
    ENTERO          reduce using rule 10 (instruccion -> instIF .)
    DECIMAL         reduce using rule 10 (instruccion -> instIF .)
    CADENA          reduce using rule 10 (instruccion -> instIF .)
    CHARACTER       reduce using rule 10 (instruccion -> instIF .)
    TKN_FALSE       reduce using rule 10 (instruccion -> instIF .)
    TKN_TRUE        reduce using rule 10 (instruccion -> instIF .)
    TKN_NULL        reduce using rule 10 (instruccion -> instIF .)
    TKN_VAR         reduce using rule 10 (instruccion -> instIF .)
    TKN_IF          reduce using rule 10 (instruccion -> instIF .)
    TKN_WHILE       reduce using rule 10 (instruccion -> instIF .)
    TKN_BREAK       reduce using rule 10 (instruccion -> instIF .)
    TKN_MAIN        reduce using rule 10 (instruccion -> instIF .)
    TKN_FOR         reduce using rule 10 (instruccion -> instIF .)
    $end            reduce using rule 10 (instruccion -> instIF .)
    TKN_LLAVEDER    reduce using rule 10 (instruccion -> instIF .)


state 9

    (11) instruccion -> instWhile .

    error           reduce using rule 11 (instruccion -> instWhile .)
    TKN_PRINT       reduce using rule 11 (instruccion -> instWhile .)
    TKN_NOT         reduce using rule 11 (instruccion -> instWhile .)
    TKN_MENOS       reduce using rule 11 (instruccion -> instWhile .)
    TKN_PARIZQ      reduce using rule 11 (instruccion -> instWhile .)
    ID              reduce using rule 11 (instruccion -> instWhile .)
    ENTERO          reduce using rule 11 (instruccion -> instWhile .)
    DECIMAL         reduce using rule 11 (instruccion -> instWhile .)
    CADENA          reduce using rule 11 (instruccion -> instWhile .)
    CHARACTER       reduce using rule 11 (instruccion -> instWhile .)
    TKN_FALSE       reduce using rule 11 (instruccion -> instWhile .)
    TKN_TRUE        reduce using rule 11 (instruccion -> instWhile .)
    TKN_NULL        reduce using rule 11 (instruccion -> instWhile .)
    TKN_VAR         reduce using rule 11 (instruccion -> instWhile .)
    TKN_IF          reduce using rule 11 (instruccion -> instWhile .)
    TKN_WHILE       reduce using rule 11 (instruccion -> instWhile .)
    TKN_BREAK       reduce using rule 11 (instruccion -> instWhile .)
    TKN_MAIN        reduce using rule 11 (instruccion -> instWhile .)
    TKN_FOR         reduce using rule 11 (instruccion -> instWhile .)
    $end            reduce using rule 11 (instruccion -> instWhile .)
    TKN_LLAVEDER    reduce using rule 11 (instruccion -> instWhile .)


state 10

    (12) instruccion -> instBreak . finalizacion
    (4) finalizacion -> . TKN_PTCOMA
    (5) finalizacion -> .

    TKN_PTCOMA      shift and go to state 35
    error           reduce using rule 5 (finalizacion -> .)
    TKN_PRINT       reduce using rule 5 (finalizacion -> .)
    TKN_NOT         reduce using rule 5 (finalizacion -> .)
    TKN_MENOS       reduce using rule 5 (finalizacion -> .)
    TKN_PARIZQ      reduce using rule 5 (finalizacion -> .)
    ID              reduce using rule 5 (finalizacion -> .)
    ENTERO          reduce using rule 5 (finalizacion -> .)
    DECIMAL         reduce using rule 5 (finalizacion -> .)
    CADENA          reduce using rule 5 (finalizacion -> .)
    CHARACTER       reduce using rule 5 (finalizacion -> .)
    TKN_FALSE       reduce using rule 5 (finalizacion -> .)
    TKN_TRUE        reduce using rule 5 (finalizacion -> .)
    TKN_NULL        reduce using rule 5 (finalizacion -> .)
    TKN_VAR         reduce using rule 5 (finalizacion -> .)
    TKN_IF          reduce using rule 5 (finalizacion -> .)
    TKN_WHILE       reduce using rule 5 (finalizacion -> .)
    TKN_BREAK       reduce using rule 5 (finalizacion -> .)
    TKN_MAIN        reduce using rule 5 (finalizacion -> .)
    TKN_FOR         reduce using rule 5 (finalizacion -> .)
    $end            reduce using rule 5 (finalizacion -> .)
    TKN_LLAVEDER    reduce using rule 5 (finalizacion -> .)

    finalizacion                   shift and go to state 53

state 11

    (13) instruccion -> instMain .

    error           reduce using rule 13 (instruccion -> instMain .)
    TKN_PRINT       reduce using rule 13 (instruccion -> instMain .)
    TKN_NOT         reduce using rule 13 (instruccion -> instMain .)
    TKN_MENOS       reduce using rule 13 (instruccion -> instMain .)
    TKN_PARIZQ      reduce using rule 13 (instruccion -> instMain .)
    ID              reduce using rule 13 (instruccion -> instMain .)
    ENTERO          reduce using rule 13 (instruccion -> instMain .)
    DECIMAL         reduce using rule 13 (instruccion -> instMain .)
    CADENA          reduce using rule 13 (instruccion -> instMain .)
    CHARACTER       reduce using rule 13 (instruccion -> instMain .)
    TKN_FALSE       reduce using rule 13 (instruccion -> instMain .)
    TKN_TRUE        reduce using rule 13 (instruccion -> instMain .)
    TKN_NULL        reduce using rule 13 (instruccion -> instMain .)
    TKN_VAR         reduce using rule 13 (instruccion -> instMain .)
    TKN_IF          reduce using rule 13 (instruccion -> instMain .)
    TKN_WHILE       reduce using rule 13 (instruccion -> instMain .)
    TKN_BREAK       reduce using rule 13 (instruccion -> instMain .)
    TKN_MAIN        reduce using rule 13 (instruccion -> instMain .)
    TKN_FOR         reduce using rule 13 (instruccion -> instMain .)
    $end            reduce using rule 13 (instruccion -> instMain .)
    TKN_LLAVEDER    reduce using rule 13 (instruccion -> instMain .)


state 12

    (14) instruccion -> instFor .
